[package]
name = "rysk-core"
version = "0.0.2"
authors = ["AidoP <aidop@me.com>"]
edition = "2018"
description = "RISCV instruction decoding and execution"
repository = "https://github.com/AidoP/rysk-core"
readme = "readme.md"
license = "MIT"

categories = ["emulators"]
keywords = ["riscv", "RISC-V", "virtualisation"]

[features]
default = ["ext-csr"]
ext-csr = []
ext-m = []

# RV32E may disable other features
rv32e = []