[package]
name = "rysk-core"
version = "0.0.3"
authors = ["AidoP <aidop@me.com>"]
edition = "2018"
description = "RISCV instruction decoding and execution"
repository = "https://github.com/AidoP/rysk-core"
readme = "readme.md"
license = "MIT"

categories = ["emulators"]
keywords = ["riscv", "RISC-V", "virtualisation"]

[features]
default = ["ext-csr", "ext-m"]
ext-csr = []
ext-m = []